--- a/config/cataclysm.toml
+++ b/config/cataclysm.toml
@@ -14,6 +14,8 @@
 	#BossMusicVolume(denominator)
 	#Range: 1 ~ 1000000
 	BossMusicVolume = 2
+	#AddedServerlist(on/off)
+	"AddedServerlist(on/off)" = true
 
 [Weapon]
 	#Armor Infinity Durability(on/off)
@@ -51,15 +53,6 @@
 	#Sandstorm's Timer
 	#Range: 0 ~ 1000000
 	SandstormTimer = 160
-	#Soul Render's Timer
-	#Range: 0 ~ 1000000
-	SoulRenderCooldown = 100
-	#Gauntlet of Maelstrom's Timer
-	#Range: 0 ~ 1000000
-	gauntletofMaelstromCooldown = 80
-	#The Immolator's Timer
-	#Range: 0 ~ 1000000
-	immolatorCooldown = 300
 
 ["Entity damage"]
 	#Void Rune's Damage
@@ -72,7 +65,7 @@
 	#Range: 0.0 ~ 1000000.0
 	DeathLaserdamage = 5.0
 	#Death Laser's Hp Damage
-	#Range: 0.0 ~ 100.0
+	#Range: 0.0 ~ 1.0
 	DeathLaserHpdamage = 0.05
 	#Player's Laser's Damage
 	#Range: 0.0 ~ 1000000.0
@@ -113,15 +106,6 @@
 	#Ancient Desert Stele's Damage
 	#Range: 0.0 ~ 1000000.0
 	"Ancient Desert Stele Damage" = 18.0
-	#Player's Phantom Arrow's Damage
-	#Range: 0.0 ~ 1000000.0
-	"Phantom Arrow Damage" = 5.0
-	#Phantom Halberd's Damage
-	#Range: 0.0 ~ 1000000.0
-	"Phantom Halberd Damage" = 12.0
-	#Cursed Sandstorm's Damage
-	#Range: 0.0 ~ 1000000.0
-	"Cursed Sandstorm Damage" = 6.0
 
 ["Ender Guardian"]
 	#EnderGuardian's Health Multiplier
@@ -422,12 +406,12 @@
 	#Remnant's Stomp Hp Damage
 	#Range: 0.0 ~ 1.0
 	"Remnant's Stomp Hp Damage" = 0.03
+	#Leviathan's Healing with out target
+	#Range: 0.0 ~ 1000000.0
+	LeviathanNatureHealing = 10.0
 	#Remnant's EarthQuake Damage
 	#Range: 0.0 ~ 1000000.0
 	"Remnant's EarthQuakeDamage" = 8.0
-	#AncientRemnant's Healing with out target
-	#Range: 0.0 ~ 1000000.0
-	AncientRemnantNatureHealing = 10.0
 
 [Koboleton]
 	#Cause Koboleton to Drop Item In Hand Percent
@@ -444,20 +428,7 @@
 	#Range: 0.0 ~ 1000000.0
 	KobolediatorDamageMultiplier = 1.0
 
-["World Generation"]
-	#Defines the area in which the structure check for height variances (1 means 9 chunks will be checked (center + area around it)) - 0 disables this check
-	#Range: 0 ~ 5
-	cursedPyramidCheckRange = 2
-	#Allowed height variance for the check - if the variance is lower than this value the structure will not spawn (has no effect if the are check is disabled)
-	#Range: 0 ~ 32
-	cursedPyramidHeightVariance = 7
-
-[Block]
-	#Cursed Tombstone Summon cooldown Minute
-	#Range: 3 ~ 300
-	"Cursed Tombstone Summon cooldown Minute" = 30
-
-[Wadjet]
+[wadjet]
 	#Wadjet's Health Multiplier
 	#Range: 0.0 ~ 1000000.0
 	WadjetHealthMultiplier = 1.0
@@ -465,54 +436,11 @@
 	#Range: 0.0 ~ 1000000.0
 	WadjetDamageMultiplier = 1.0
 
-[Aptrgangr]
-	#Aptrgangr's Health Multiplier
-	#Range: 0.0 ~ 1000000.0
-	AptrgangrHealthMultiplier = 1.0
-	#Aptrgangr's Damage Multiplier
-	#Range: 0.0 ~ 1000000.0
-	AptrgangrDamageMultiplier = 1.0
-	#Axe Blade's Damage
-	#Range: 0.0 ~ 1000000.0
-	AptrgangrAxeBladeDamage = 8.0
-
-[Maledictus]
-	#Maledictus's Health Multiplier
-	#Range: 0.0 ~ 1000000.0
-	MaledictusHealthMultiplier = 1.0
-	#Maledictus's Damage Multiplier
-	#Range: 0.0 ~ 1000000.0
-	MaledictusDamageMultiplier = 1.0
-	#Maledictus's Immune to Long distance attack range.
-	#Range: 1.0 ~ 1000000.0
-	"Maledictus's prevent attacks from far away Range" = 12.0
-	#Maledictus's Healing with out target
-	#Range: 0.0 ~ 1000000.0
-	MaledictusNatureHealing = 10.0
-	#Maledictus's Phantom Halberd Damage
-	#Range: 0.0 ~ 1000000.0
-	"Maledictus' Phantom Halberd Damage'" = 10.0
-	#Maledictus's DamageCap
-	#Range: 0.0 ~ 1000000.0
-	MaledictusDamageCap = 20.0
-	#Maledictus's melee Hp Damage
-	#Range: 0.0 ~ 1.0
-	"Maledictus's melee Hp Damage" = 0.05
-	#Maledictus's Shock wave Hp Damage
-	#Range: 0.0 ~ 1.0
-	"Maledictus's Shock Wave Hp Damage" = 0.03
-	#Maledictus's AOE Hp Damage
-	#Range: 0.0 ~ 1.0
-	"Maledictus's AOE Hp Damage" = 0.15
-	#Maledictus's flying Smash Hp Damage
-	#Range: 0.0 ~ 1.0
-	"Maledictus's Flying Smash Hp Damage" = 0.1
-	#Maledictus's Jump Smash Hp Damage
-	#Range: 0.0 ~ 1.0
-	"Maledictus's Jump Smash Hp Damage" = 0.08
-	#Maledictus's Phantom Arrow's Damage
-	#Range: 0.0 ~ 1000000.0
-	"Maledictus's Phantom Arrow Damage" = 5.0
-	#Maledictus's cracked block breaking ignore the MobGriefing
-	MaledictusBlockBreaking = true
+["World Generation"]
+	#Defines the area in which the structure checks for height variances (1 means 9 chunks will be checked (center + area around it)) - 0 disables this check
+	#Range: 0 ~ 4
+	cursedPyramidCheckRange = 2
+	#Allowed height variance for the check - if the variance is lower than this value the structure will not spawn (has no effect if the are check is disabled)
+	#Range: 0 ~ 32
+	cursedPyramidHeightVariance = 7
 
