规范化改造 - 温度调整 - 2

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@
 /hmclversion.cfg
 /config/inventoryprofilesnext/*
 !/config/inventoryprofilesnext/inventoryprofiles.json
+/config/emi.css
+/config/jade/
+/config/modernfix-mixins.properties
