--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -92,3 +92,4 @@ irons_spellbooks:scroll_forge
 twilightforest:crumble_horn
 twilightforest:transformation
 twilightforest:uncrafting
+kubejs:myanmar_market
