为器官tag添加价值

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -92,4 +92,4 @@ irons_spellbooks:scroll_forge
 twilightforest:crumble_horn
 twilightforest:transformation
 twilightforest:uncrafting
-kubejs:myanmar_market
+kubejs:organ_recycler
