--- a/.packwizignore
+++ b/.packwizignore
@@ -1,26 +1,31 @@
-/.vscode/
+/.*
 /crash-reports/
 /local/
 /logs/
 /options.txt
 /usercache.json
 /usernamecache.json
-/saves/
-/screenshots/
-/shaderpacks/
+/saves
+/screenshots
+/shaderpacks
 /PCL/
 /No Flesh Within Chest.jar
 /No Flesh Within Chest.json
-/modernfix/
-/resourcepacks/
+/modernfix
+/resourcepacks
 /rhino.local.properties
 /emi.json
 /TrashSlotSaveState.json
-/lightspeed-cache/
+/lightspeed-cache
 /XaeroWaypoints*
 /config/oculus.properties
 /config/inventoryprofilesnext
 /config/xaerominimap_entities.json
+/config/momlove
+/config/ibeeditor*
+/config/jei/world
+/config/konkrete
+/config/spark
 /No Flesh Within Chest-natives
 /quests_structures
 /schematics
@@ -30,8 +35,11 @@
 /patchouli_data.json
 /hmclversion.cfg
 /config/inventoryprofilesnext/*
-/config/emi.css
-/config/jade/
-/config/modernfix-mixins.properties
-/*.zip
 !/config/inventoryprofilesnext/inventoryprofiles.json
+/kubejs/probe
+/LICENSE
+/README.md
+/*.bat
+/*.zip
+/mods/IBEEditor*
+/mods/ponderjs*
