--- a/config/coldsweat/world_settings.toml
+++ b/config/coldsweat/world_settings.toml
@@ -33,7 +33,7 @@
 	#*nbt: The NBT data that the block must have for the temperature to be applied.
 	#*temperature-limit: The maximum world temperature at which this block temp will be effective.
 	#- (Represents the minimum temp if the block temp is negative)
-	"Block Temperatures" = [["cold_sweat:boiler", 0.27, 7, 0.88, "lit=true", "", 4], ["cold_sweat:icebox", -0.27, 7, 0.88, "frosted=true", "", 0], ["minecraft:fire", 0.476, 7, 0.9, "", "", 8], ["#minecraft:campfires", 0.476, 7, 0.9, "lit=true", " ", 8], ["minecraft:magma_block", 0.25, 3, 1.0], ["minecraft:lava_cauldron", 0.5, 7, 1.5], ["minecraft:ice", -0.15, 4, 0.6, "", "", -0.7], ["minecraft:packed_ice", -0.25, 4, 1.0, "", "", -0.7], ["minecraft:blue_ice", -0.35, 4, 1.4, "", "", -0.7], ["#minecraft:ice", -0.15, 4, 0.6, "", "", -0.7]]
+	"Block Temperatures" = [["cold_sweat:boiler", 0.27, 7, 0.88, "lit=true", "", 4], ["cold_sweat:icebox", -0.27, 7, 0.88, "frosted=true", "", 0], ["minecraft:fire", 0.476, 7, 0.9, "", "", 8], ["#minecraft:campfires", 0.476, 7, 0.9, "lit=true", " ", 8], ["minecraft:magma_block", 0.25, 3, 1.0], ["minecraft:lava_cauldron", 0.5, 7, 1.5], ["#minecraft:ice", -0.15, 4, 0.6, "", "", -0.7], ["minecraft:ice", -0.15, 4, 0.6, "", "{}", -0.7], ["minecraft:packed_ice", -0.25, 4, 1.0, "", "{}", -0.7], ["minecraft:blue_ice", -0.35, 4, 1.4, "", "{}", -0.7]]
 	#The maximum range of blocks' area of effect
 	#Note: This will not change anything unless blocks are configured to utilize the expanded range
 	#This value is capped at 16 for performance reasons
