--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -93,3 +93,19 @@ twilightforest:crumble_horn
 twilightforest:transformation
 twilightforest:uncrafting
 kubejs:organ_recycler
+aether:accessory_freezable
+aether:ambrosium_enchanting
+aether:block_placement_ban
+aether:enchanting
+aether:freezing
+aether:fuel
+aether:icestone_freezable
+aether:incubation
+aether:item_placement_ban
+aether:placement_conversion
+aether:repairing
+aether:swet_ball_conversion
+aether_redux:infusion
+deep_aether:poison_recipe
+goety:brewing
+twilightdelight:frozen
