--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -109,3 +109,6 @@ aether_redux:infusion
 deep_aether:poison_recipe
 goety:brewing
 twilightdelight:frozen
+the_bumblezone:queen_color_randomizer_trades
+the_bumblezone:queen_trades
+sons_of_sins:etheric_blood_imbibation
